Added icons and created a post class for posting new shipments

--- a/RMaD/RMaD/RMaD/UxForm.resx
+++ b/RMaD/RMaD/RMaD/UxForm.resx
@@ -117,7 +117,187 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="eventLog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnRefresh.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAFsSURBVEhLzZU7L0RBGIaPbKNQUaFSECQolMKvkOAXiEJcCvwBGoRKgk70gtq1FdRKCaJCVCRu
+        zztzxiXZ2T0zexL7JE/yfbNnZvbMzvdtUo2MYLMN82cRP1Gb5M4CavFlk+WMW/wEp3AYcz2mK3zBN9RG
+        8gNPcQArphVv8B57sQtn8Bq12SoWMDM65zEbftOGt6ktGoBaXEJtso01WJZJ1IRRk/1Fm+i4Bk32wyxq
+        zoTJStCAz7hjsjD28BG1hhd9k3dsN1kYnai30C3zcoxnNoziAg9tWBzdkjUbRrGBugReXnHehlGoIFUv
+        Xu5w3YZRbKLqxcsRntswiks8sGFxplEtoMNkYbhbpDryojv8hLsmC2MfH7DeZCVwlayayMocas64ycqg
+        fqK+ognqSeo3PvSZntGzWxrIijrjCmqiOqbephvrUnvSMddN1fCCuqmjH/Unox9eC/1WLUWV34cV04RD
+        qD4jFTfif5MkX+A4UnFH35crAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pbIconImage.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAABGdBTUEAALGPC/xhBQAACZpJREFUeF7t
+        nWfMNUUZhj97REWsYFRUIIpoolGMscYCsUUiKIYfoIb2wwRFKZaIPZYIStEIKkFNRKoUlRAgyA+lIwg2
+        1EQBsQBSxN7vK54x4+Z+39lzzp7dnXefK7n+wPeenZ09Z3bKM89sCoIgCIIgCIIgCILpcN+ZwQZme7mX
+        PFKeI38gb5f/bsh/4/99U/Jv95RPkkFl3FPuJI+VN8jmg57XX8jPypdKPjsYKY+Q75c3Svcgu5Av1Hvl
+        w2UwEnjwR8k/SvfQVuEf5KdkfBEG5D7yEHmndA+pD++QB8l7y6BHniKvkO6hDOH35NNl0AP7y79I9yCG
+        9M9yXxmsCJr8z0tX+WPyOElZgw7ZTDI+dxXextvkSfLd8jVyO/mQmQ+SD5ZPk7vIt8mvyWX6Fl+X95dB
+        B/DwL5KuoteTiR1+jTvLRTpp/M3z5GckvX53jfX8lowvwZLQlH5DugpeSx78YXJz2RW0FO+Qv5Lummt5
+        towRwhJ8TrqKdf5DfkzSnK8KPpsW4Z/SlcHJjGSwAPSoXYU6fy6fL/viOfLH0pXFubcM5mAHybDKVWbT
+        M2SXzX1beC1cKF2ZmnIvT5ZBC3hnXi5dRTY9UQ75juXaNPGubE2vkjE8bMHbpavApvTwx7A6dw/5RenK
+        2PStMlgHmtXfSVd5uefJe8mxwC/7AunKmssI5WEyWINPSFdxuXT4HirHBl/e66Urc+7HZWCgAn8vXaUl
+        /yafKcfKc2VpiHiXXOVQtVreKV2F5RKqNXaIHnJlzz1UBhl0pH4qXWUlmc8fY9PfhF/3r6W7h+RPJPcc
+        zGBixVVUbk096HdJdw+53HMw45PSVVLybsmqXS3QUpVC1AgpC2b8ULpKSh4va6PUFyAEPRCPla6Cculd
+        18YLpbuX3EfLyfM66SoneausscPENDFDPndPyV3l5PmwdJWTPEvWCmV395T8gJw8hF+5ykkyP1ArhIy7
+        e0qeJidPKbybkK5aoYl395S8VE6eUpgVwZq18gzp7il5k5w8pYDLx8haYeXP3VOSyOPJ83fpKidZc2Qt
+        kUrunpJscJk8pdWzmhM4lFoAVjcnT2kJuIYFoLV4lHT3lCRAZPL8UrrKSbKLp1bITuLuKUnyiclTCgB9
+        uayV10p3T8nvyMlzsnSVkzxQ1grZRNw9Jb8iJ88HpaucJJs6a+VU6e4pyRdk8rAj11VO8reyxsUgIoVL
+        Ec41v946YyvpKif32bI2XibdvST/JSPH0AxSrLhKSn5a1kYpmcWVMpjxEekqKUlT+kBZCwSGMsZ395L8
+        kAxmlBZNkKXVWnifdPeQG0mlGpReA6wa1tAKsMGllF7muzJocIB0lZV7uBw7lNGVPffNMmjwAEn8n6uw
+        JCuHY94a9iJZWtxiWEveo8BAbh9Xabk/k0MkhCixhWyTnJpMZcEa8I6/WbqKyx1b8iUmfUgN58qaSwQQ
+        LV2wDm+SrvKafkGOYYaQPAVMV7syNuUMgqAAD/V86SqwKV+CIVsCHv4J0pWt6bkyNoS2ZGvZNlMnr4Mh
+        9tszjdv2i0pW8ZpjGweBkGrmy12FNqVj2Ofo4Fmy7WkkjApY8AoWgOlSV6lOhohHyFXuIibGj3WJUiBr
+        biz5LgHvzLbv2CTJGQ6WXc4a8ophKro0v990LB3VqqGjVQqscPKwSOtKIoZFHgJ/8wL5JbnIcTREOo0p
+        k1nV0NPn1+Qquo23yFMkOQhfKTkOjk7c/SSzcmxRZ3GGAI33SFLTz/trz2UpOB5+x/CL5FSwth3DIaRs
+        rARGs79C+AW3SSbZt+QCiP3+K4Qm9cWS1CtkDHMPYUgpE2WjjNH8dwiZwxl6/Ua6ih+jlPUYGRnCFyQd
+        /8oCy5jf+W38ttxdRqvQAjpPr5fzHMZQiz+SfBGig7gG/OKJlHWVt5G8VvJFCGY8TnKsu6usjSyHYbHo
+        NVl4J5L+lSygroLmlb4CCSeZNfyo5JwecvXRiXy8JFizzYkd/Bv+LX/D3/IZ+0g+k6ROXKOrfglb44mF
+        nNyx9E+Ql0hXKfNIJDFpZjkMss9dNpxYzjVJ90qT7so2jxdLWsJJ8Gq5zEQOB0ZwPNyYhlh8oTlXkI6e
+        K3MbiX9gO/mGhfl8QqYXaT45E5Dmt4aUsZw2erqc52zBJHXDiSJjinfsBAIhWWBxN72eHLd2tNxG1sa2
+        kgmsRU46J8ppw4SOk+OHTBjuRteTSaAaH3wTVhq/LOdt+S6T9DWqho4Np2O4G1xLtk31eQpoXxBbcLV0
+        97yWTIjxBaqSLeU8M3qEWdG5qzktXAne7XQWSQ/n6sDJUTpkG6sKmq7SIRC5HLdWYxKIRSFKqXRGUu51
+        sprzBtm2NU9Tx4xYTcfBdAX1NE/HmGny0e+OZkaLHqy7AedRcsqrZNw7rz1XN84z5ahnDUuHPyQZ1+8n
+        g/+yv2w7bzDaQyY4+qXNUIeHv5cM/p83yjZfAup4Nzkq2PbUJoqWh/8GGXj2kNSRq7tcpo1Hs5LIO+lC
+        6QralFW1YH14Hbi6a8pp5aMILimdi5OMU7PbUzpIM/kWOShM1TJf7wqXy8hgcmveS8DooM0Q8U9y0GXk
+        0olfyGzgFMf5y8I8QZtpdHY8DcJLpCtQLtO7U5rh65odZZtpY5JT9QpNFNOTrjC5bOUKlqPNFvlrZK+v
+        WIYrriC5nAe44QIbBoAYRVZIXR3nMg/TCww9Slk9mawgMiboBhaPSpNsrL/0Miws5ffHr8qgW9rkSHiF
+        XDml6B6GhQRJBt3CkLsUXnaRXCnEybsL5xLDF6wGYgxdnSd5TTxRroxSImTmsQmGDFYDLWtprYANLCuB
+        Hj0JmNxFk7yngtVSmnzjGbXZATU3r5Lugrn0VoPVQsCsq/vclXQGj5XuYkl2xQT9UIq3JDtapzC+JNO1
+        u1iS5EhBP5TOWrxRdgop1NyFchkhBP1QOpMYnyo741DpLpJkh2zQL9+X7lkkOz1kq9TzJEdv0C9HSvcs
+        kp0uE5fe/+yVD/qldDI52+g7oXS0K7NPj5RBv7D7qrRA1MlzITOn+/AkQ5JgGNhS555JspPDqUvn+ZEV
+        OxgGElG4Z5Ls5HzC0vw/5/4Gw1DaVtZJJDapWdyHJyPWfzjYXueeSbKT1pnQLvfhyd4DEoP/Qd27Z5K8
+        VC7NPPvYw3FJSP7ScGq3+/Bw/DJ/szRtz+8Lxycbdpdmnnw24bj8q1wa8tm6Dw/HL6330pwh3YeH47eT
+        YSBHrC1zhFo4jJxh1Nl5xSQrZHmRk7HcxcLxyDPilx+HVQdBEARBEARBEARBkLFp038A7VnXca62o6QA
+        AAAASUVORK5CYII=
+</value>
+  </data>
+  <metadata name="elShipments.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
+  </metadata>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>75</value>
+  </metadata>
+  <metadata name="iconImages.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>135, 17</value>
+  </metadata>
+  <data name="iconImages.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABC
+        GAAAAk1TRnQBSQFMAgEBBgEAAQgBAAEIAQABIAEAASABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABgAMAAUADAAEBAQABCAYAASAYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8ADgAB/wHvARECAAER
+        Ae8B/w4AAQ5pAAHvBgAB7w4AARVpAAERAQAB8wIAAfMBAAERDgABBwEAAexmAAH/CAAB/3AAAf8C8gH/
+        AgAB8gEAARUEAAEVAQAB8wIAAf8C8gH/aQAB9AFDAgABEQIHARABAAHvBAAB7wEAARACBwERAgABQwH0
+        CQAB9xcAAfRFAAH/ARMBAAISBAAB7AH/BAAB/wHsBAACEgEAARMB/x0AAf9IAAG8AQABFQL/AfIC9wHy
+        Af8GAAH/AfIC9wHyAv8BFQEAAbwHAAEOFwAB9EYAARQBAAHxFAAB8QEAARRmAAEOAQAB/wcAAfIB6wIR
+        AesB8gcAAf8BAAEOZgAB6wEAAW0B9AQAAf8BkgYAAZIB/wQAAfQBbQEAAesNAAH3CwABDkwAAfQBQwEA
+        AQ8B9AMAAfABAAEOAQcC/wEHAQ4BAAHwAwAB9AEPAQABQwH0CwABDgQAAewB9AIAAf8B8wEUBAABB0sA
+        Af8B7AEAAewDAAHqAQAB8AQAAfABAAHqAwAB7AEAAewB/xoAAW1OAAH/AQABDwMAAQ4BAAH/BAAB/wEA
+        AQ4DAAEPAQAB/xoAAe9PAAH/AQABDwMAAQ4BAAH/BAAB/wEAAQ4DAAEPAQAB/xIAAf8FAAGSAgAB700A
+        Af8B7AEAAewDAAHqAQAB8AQAAfABAAHqAwAB7AEAAewB/w0AAfAKAAH/TgAB9AFDAQABDwH0AwAB8AEA
+        AQ8BvAL/AbwBDgEAAfADAAH0AQ8BAAFDAfQYAAH3TQAB6wEAAW0B9AQAAf8B7QYAAe0B/wQAAfQBbQEA
+        AetmAAEOAQAB/wcAAfIB6wIQAesB8gcAAf8BAAEOCwAB7AEAAQdYAAEUAQAB8RQAAfEBAAEUDQAB/1gA
+        AbwBAAEVAv8B8gLvAfIB/wYAAf8B8gLvAfIC/wEVAQABvAsAARIBAAHyWAAB/wETAQACEgQAAewB/wQA
+        Af8B7AQAAhIBAAETAf8LAAH0WwAB9AFDAgABEQLvARABAAEHBAABBwEAARAC7wERAgABQwH0GQAB/08A
+        Af8C8gH/AgAB8gEAARUEAAEVAQAB8gIAAf8C8gH/DgABEA0AAf9TAAH/CAAB/3cAAREBAAHzAgAB8wEA
+        AREbAAHxAf8BB1oAAe8GAAHvGAABDwcAAQdXAAH/Ae8BEQIAAREB7wH/GgAB9AEUAQAB6/8AVAAB/xTx
+        Af8oAAHzAW0BDhUAARQB8CgAAfMBABIPAQAB8ycAAfQBDhkAAfInAAHzAQAB/xAAAf8BAAHzJwAB7wIA
+        AfcUBwHvARABAAHsBAABbRoAAW0CAAHyBBIBFAEAAf8QAAH/AQABFAQSAfIiAAHtAQABQxYAAewBAAES
+        BAABDhoAAQ4CAAHwAQ4DBwGSAQAB/xAAAf8BAAGSAwcBDgHwIgAB7QEAAUMWAAHsAQABEgQAAUMBAAH0
+        FgAB9AEAARUCAAHwARADAAHzAQAB/xAAAf8BAAHzAwABEAHwBQAB/wH3AhAB9wH/CgAB/wH3AhAB9wH/
+        BwAB7QEAAUMWAAHsAQABEgQAAesBAAHxFgAB8QEAAesCAAHwARADAAHzAQAB/xAAAf8BAAHzAwABEAHw
+        BQAB9wQAAfcKAAH3BAAB9wcAAe0BAAFDFgAB7AEAARIEAAEHAQABkhYAAe0BAAEHAgAB8AEQAwAB8wEA
+        Af8QAAH/AQAB8wMAARAB8AUAAREBAALzCgABDwEAAREBAALzBAABbQQAAe0BAAFDFgAB7AEAARIEAAH0
+        AQABDgH/FAAB/wEOAQAB9AIAAfABEAMAAfMBAAH/EAAB/wEAAfMDAAEQAfAFAAERAQAC8wwAAREBAALz
+        CQAB7QEAAUMWAAHsAQABEgUAAesBAAHvFAAB7wEAAesDAAHwARADAAHzAQAB/xAAAf8BAAHzAwABEAHw
+        BQAB9wQAAfcKAAH3BAAB9wcAAe0BAAFDAgAB/wHrDg8BEwH/AgAB7AEAARIFAAHzAQABDgH0EgAB8wEO
+        AQAB8wMAAfABEAMAAfMBAAH/EAAB/wEAAfMDAAEQAfAFAAH/AfcCEAH3Af8KAAH/AfcCEAH3Af8HAAHt
+        AQABQwIAAfQQAAHxAgAB7AEAARIGAAGSAQABQwH0EAAB9AERAQABkgQAAfEBDgH/AgAB8wEAAf8QAAH/
+        AQAB8wIAAf8BDgHxIgAB7QEAAUMDAAHwDu8BBwH/AgAB7AEAARIGAAH/AW0BAAFDAfMOAAHzAUMBAAHr
+        Af8EAAH0AQAB9AIAAfQBAAH0EAAB9AEAAfQCAAH0AQAB9CIAAe0BAAFDFgAB7AEAARIHAAH/AW0BAAEO
+        Ae8B/woAAf8B7wEOAQABbQH/BQAB/wERAQcCAAH/AQ4B8RAAAfEBDgH/AgABBwERAf8bAAH/BgAB7QEA
+        AUMWAAHsAQABEggAAf8BkgIAAQ8B7QHxAfQB/wIAAf8B9AHxAe0BDwIAAZIB/wcAAe8BEQH/AgAB7AHr
+        EAAB6wHsAgAB/wERAe8CAAFtCQABbQ4AAf8B7AEAARIEAAHtAQABQwIAAf8B6wsPAW0B/wUAAewBAAES
+        CgAB8wFtDAABbQHzCQAB/wFDAewB/wEAAfMBAAHyDgAB8gEAAfMBAAH/AewBQwH/AgABbQkAAW0OAAEH
+        AQABDwH0BAAB7QEAAUMCAAH0DQAB9AUAAewBAAESDAAB9AEQCAABEQH0DAAB8wEOAewB/wEAAfcBDwHz
+        DAAB8wEPAfcBAAH/AesBDwHzGwAB8gIAAfIFAAHtAQABQwMAAfAL7wG8BgAB7AEAARILAAH/AesBAAEO
+        AZIB8wL/AfMB7QEOAQAB6wH/DAAB9AEUAQ8B9wHyAW0BDgEHAf8IAAH/AQcBDgFtAfIB9wEPARQB9BsA
+        AfQBEAEAAQcGAAHtAQABQxYAAewBAAESCwABkgEAAREB8wYAAfMBEAEAAfcNAAH/AQcBQwQAARAB7QHv
+        BAcB7wHtARAEAAFDAQcB/wcAAW0JAAFtDAAB7AH/BgAB7QEAAUMWAAHsAQABEgoAAfQBAAEOAfMIAAHz
+        AgAB9A0AAfEBDgHrAfAB8wHxAewDAAIRAwAB7AHxAfMB8AFtAQ4B8QgAAW0JAAFtCwAB6gH/BwAB7QEA
+        AUMCAAH/AW0HDwEVAfQJAAHsAQABEgoAAfcBAAH3CgABkgEAAfcMAAH0AQ4B7wQAAe8BDgHvAf8CAAH/
+        Ae8BDgHvBAAB7wEOAfQmAAHtAQABQwIAAfQJAAEHCQAB7AEAARIKAAEUAQAB8woAAfIBAAETDAAB7AHr
+        BAAB8AEOAfEGAAHxAQ4B8AQAAesB7CYAAe0BAAFDAwABvAfvAQcB/wIAAf8B8AXvARQBAAESCgABDgEA
+        Af8KAAH/AQABDgsAAf8BDgHxAwAB/wFDAfcIAAH3AUMB/wMAAfEBDgH/BAABbSAAAe0BAAFDDgAB9AFD
+        CAAB6goAAQ4BAAH/CgAB/wEAAQ4LAAH0AQAB9AMAAfMBAAH0CAAB9AEAAfMDAAH0AQAB9AQAAW0RAAFt
+        DgAB7QEAAUMOAAHsCQABBwoAARQBAAHzCgAB8wEAARQLAAH/AQAB8wMAAfABEAoAARAB8AMAAfMBAAH/
+        JQAB7QEAAUMOAAERAQAB7AH/AQAB9AFDAgAB9wH/CgABkgEAAe0KAAGSAQABkgwAARQB7wMAAfABEAoA
+        ARAB8AMAAe8BFCYAAe0BAAFDDgABDwEAAfcBAAH0ARECAAHvDAAB8wEAAQ4B8wgAAfMCAAH0DAABvAEO
+        AfMCAAHzAQAB9AgAAfQBAAHzAgAB8wEOAbwmAAHtAQABQw4AAQ8BAAH3AfQBEQIAAe8OAAGSAQABEAHz
+        BgAB8wERAQABkg0AAf8B7AEPAfAC/wEUAe0IAAHtARQC/wG8AQ8B7AH/JgAB7QEAAUMOAAEPAQAB6wEQ
+        AgABBw8AAf8BbQIAAZIB8gL/AfMBkgIAAW0B/w4AAf8B7wIOARUBDgEAAfAGAAHwAQABDgEVAg4B7wH/
+        JwAB7QEAAUMOAAEPBAABBxEAAf8BkggAAZIB/xEAAf8B8QG8AfEBBwEAAZIB9AIAAfQB7QEAAQcB8QG8
+        AfEB/ykAAe8CAAGSDe8BDgMAAbwUAAHzAZIBFAIOARQBkgHzGAAB8gETAQACDgEAARMB8i4AAfQBDhIA
+        AfA3AAH0AvEB9DEAAfMBbQEOCgAEDwETAfIqAAFCAU0BPgcAAT4DAAEoAwABgAMAAUADAAEBAQABAQYA
+        AQQWAAP/AQAI/wgACP8IAAH/AfABDwH/AcACAAEDCAAB/wHwAQ8B/wHAAgABAwgAAf8B8QGPAf8BxwL/
+        AfMIAAH/AeMBxwH/AecC/wHzCAAB+AFjAcYBHwHnAv8B8wgAAfABAwHAAQ8B4wL/AeMIAAHgAQMBwAEH
+        AfMC/wHHCAAB4AEHAeABBwHxAv8BxwgAAeMC/wHHAfgC/wGPCAAB4wH4AR8BxwH8AX8B/wEfCAAB4QHg
+        AQcBhwH+AR8B/AE/CAAC4AIHAf8BAQGAAX8IAAHwAeMBxwEPAf8BwAEBAf8IAAH4AeMBxwEfAf8B4AED
+        Af8IAAH4AeMBxwEfAf8BwwHhAf8IAAHwAeMBxwEPAf8BjwHxAf8IAALgAgcB/wGfAfgB/wgAAeEB4AEH
+        AYcB/wGfAfwB/wgAAeMB+AEfAccB/wEfAfwB/wgAAeMC/wHHAf8BHwH8Af8IAAHgAQcB4AEHAf8BHwH8
+        Af8IAAHgAQMBwAEHAf8BHwH8Af8IAAHwAQMBwAEPAf8BnwH4Af8IAAH4AWMBxgEfAf8BjwH4Af8IAAH/
+        AeMBxwL/AccB8QH/CAAB/wHxAY8C/wHgAQMB/wgAAf8B8AEPAv8B8AEHAf8IAAH/AfABDwL/AfwBPwH/
+        CAAI/wgACP8IAAH4AgABHwT/AeACAAEHBP8B+AIAAR8E/wHAAgABAwT/AfgC/wEfBP8BwAIAAQMBwAIA
+        AQMBAAL/AQAE/wHHAv8B4wHAAgABAwEAAv8BAAT/AccC/wHjAccC/wHjATgC/wEcAfgBHwH4AR8BxwL/
+        AeMBxwL/AeMBOAL/ARwB+AEfAfgBHwHHAv8B4wHHAv8B4wE4Av8BHAH4AQABCAEDAccC/wHjAcMC/wHD
+        ATgC/wEcAfgBAAEIAQMBxwL/AuMC/wHHATgC/wEcAfgBHwHIARMBxgIAAWMB4QL/AYcBOAL/ARwB+AEf
+        AcgBEwHGAgABYwHwAv8BDwEYAv8BGAL/Ac8B8wHHAgABYwHwAX8B/gEPARgC/wEYAv8BzwHzAccC/wHj
+        AfgBHwH4AR8BGAL/ARgC/wHPAeMBxwL/AeMB/AEBAYABPwGMAv8BMQGAAQ8BzwHDAcYBAAEDAeMB/wIA
+        Af8BhAF/Af4BIQGAAQ8BzwHDAcYBAAEDAeMB/wHAAQMB/wHCAT8B/AFDAv8BzwGHAccBAAEHAeMB/wGA
+        AQEB/wHgAQ8B8AEHAv8BzwEPAccC/wHjAf8BhwHhAf8B8AIAAQ8B4AEDAcABDwHHAv8B4wH/AQ8B8AH/
+        AfgCAAEfAeABAwHAAR8BxgEAAT8B4wH/AR8B+AH/AfEB4QGHAY8C/wHPAf8BxgEAAT8B4wH/AR8B+AH/
+        AfMBxwHjAc8C/wHPAf8BxwEAATABAwH/AR8B+AH/AeMBjwHxAccBgAEAAQ8B/wHHAf8B4AEDAf8BHwH4
+        Af8B4wGPAfEBxwGAAQABDwH/AccB/wHgAQMB/wEfAfgB/wHjAZ8B+QHHBP8BxwH/AeEBAwH/AR8B+AH/
+        AfMBnwH5Ac8E/wHHAf8B4gEPAf8BDwHwAf8B8QGPAfEBjwT/AccB/wHgAR8B/wGHAeEB/wHwAQ8B8AEP
+        BP8BxwH/AeABPwH/AYABAQH/AfgBBwHgAR8E/wHHAf8B4AF/Af8BwAEDAf8B/gEBAYABfwT/AcACAAL/
+        AfABDwL/AfABDwX/AcABAAEBBv8B/AE/Bf8B4AEAAQMF/ws=
+</value>
+  </data>
+  <metadata name="btnShipmentMenu.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
   </metadata>
 </root>
